--- a/proyecto2/backend/package.json
+++ b/proyecto2/backend/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "proyecto2": "file:"
   }
 }
